--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,2 +1,6 @@
 @import "custom"
 @import "~bootstrap/scss/bootstrap"
+@import '~bootstrap-vue/dist/bootstrap-vue.css'
+
+.nav-link
+  padding: 0.3rem 0.5rem
